# Nn-inz

encoder2-push/: main.py  model.pth
encoder2-push/models/0.000002/: model.pth
encoder2-push/models/0.000399/: model.pth
nodata/: main.py  pyproject.toml
optunaTest-push/: main.py  pyproject.toml
