[project]
name = "test1project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataloader>=2.0",
    "datasets>=4.1.1",
    "keras>=3.11.3",
    "mlflow>=3.4.0",
    "nn>=0.1.1",
    "optuna>=4.5.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transforms>=0.2.1",
]
